Manage z-indexes for fixed elements centrally

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -26,6 +26,9 @@
   --brand-green: hsl(var(--brand-hue-green), 40%, 45%);
   --brand-green-light: hsl(var(--brand-hue-green), 42%, 73%);
   --brand-green-bright: hsl(var(--brand-hue-green), 70%, 45%);
+
+  --z-index-menubar: 1;
+  --z-index-overlay: 2;
 }
 
 body {
@@ -45,7 +48,7 @@ body {
 .header-bar {
   position: fixed;
   width: 100%;
-  z-index: 999999; /* Ensure the header is always the topmost element */
+  z-index: var(--z-index-menubar);
 }
 
 html {
